Use jquery to integrate back to top button and contact basic contact form modal

--- a/index.html
+++ b/index.html
@@ -117,14 +117,28 @@
     <h2>CONTACT</h2>
     <div class="contact-info center-items">
       <p>Would you like to work with me? Awesome!</p>
-      <a href="mailto:example123@gmail.com"><i class="fa-solid fa-envelope"></i> Mail Me</a>
+      <a class="mail-btn" href="#"><i class="fa-solid fa-envelope"></i> Mail Me</a>
       <a href="tel:+123456789"><i class="fa-solid fa-phone"></i> Phone Me</a>
+    </div>
+  </div>
+  <div class="modal">
+    <div class="modal-content uni-width">
+      <h2>Contact Us</h2>
+      <form class="" action="" method="get" accept-charset="utf-8">
+        <label for="">Name</label>
+        <input type="text" name="" id="" value="" />
+        <label for="">Email</label>
+        <input type="email" name="" id="" value="" />
+        <textarea name="" id= rows="8" cols="40"></textarea>
+        <button type="button" class="modal-close-btn">Close</button>
+        <button type="submit">Send</button>
+      </form>
     </div>
   </div>
 </section>
 <footer>
   <div class="uni-width center-items ptb-4">
-    <a href="#header" class="fa-solid fa-angle-up"></a>
+    <button class="fa-solid fa-angle-up top-btn"></button>
     <div class="footer-links">
       <a href="#" class="fa-brands fa-linkedin-in"></a>
       <a href="#" class="fa-brands fa-codepen"></a>
@@ -132,5 +146,7 @@
     </div>
   </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
